# CMakeRust

./: CMakeLists.txt  README.md
cmake/: CMakeCargo.cmake
crates/test-bin/: Cargo.toml
crates/test-lib/: Cargo.toml
hello_world/: CMakeLists.txt
