
add_executable(helloworld hello.c)
if(WIN32)
    if(CMAKE_BUILD_TYPE)
        if (CMAKE_BUILD_TYPE STREQUAL "Release")
            target_link_libraries(helloworld test-lib_release ws2_32 userenv mtdll)
        else()
            target_link_libraries(helloworld test-lib_debug ws2_32 userenv ntdll)
        endif()
    else() 
        target_link_libraries(helloworld test-lib_release ws2_32 userenv ntdll)
    endif()
elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    target_link_libraries(helloworld test-lib resolv)
else()
    target_link_libraries(helloworld test-lib pthread dl m)
endif()
